# test

./: CMakeLists.txt  README.md  main.cc  run1.mac  vis.mac
Research/Bismuth_sim/Purity_Geant4/include/: PrimaryGeneratorAction.hh
Research/Bismuth_sim/Purity_Geant4/src/: PhysicsList.cc  PrimaryGeneratorAction.cc
include/: AnodeSD.hh  DetectorConstruction.hh  EventAction.hh  HistoManager.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
src/: AnodeSD.cc  DetectorConstruction.cc  EventAction.cc  HistoManager.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
